[package]
name = "best"
authors = ["Daniel Liu"]
version = "0.1.0"
edition = "2021"
description = "Bam Error Stats Tool (best): analysis of error types in aligned reads."

[dependencies]
clap = { version = "^3.2", features = ["derive"] }
rayon = "^1.5"
noodles = { version = "^0.26", features = ["sam", "bam", "fasta", "bed", "core"] }
fxhash = "^0.2"
rust-lapper = "^1.0"
ordered-float = "^3.1"
flate2 = "^1.0"
