[tool.poetry]
name = "bam-error-stats"
version = "0.1.0"
description = "Analysis of error types in BAM files."
authors = ["Daniel Liu"]

[tool.poetry.dependencies]
python = "^3.9"
pysam = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
